--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link href="https://cdn.jsdelivr.net/gh/sun-typeface/SUITE@2/fonts/variable/woff2/SUITE-Variable.css"
     rel="stylesheet">
-  <script>
+  <!-- <script>
     (function () {
       const storedTheme = localStorage.getItem('vite-ui-theme');
       const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
@@ -16,8 +16,8 @@
         document.documentElement.classList.add('dark');
       }
     })();
-  </script>
-  <script type="module" src="/src/main.tsx"></script>
+  </script> -->
+  <script type="module" src="/src/app/main.tsx"></script>
 
 </head>
 
