--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <meta property="og:title" content="MMGG - 메이플스토리M 캐릭터 과제 및 보스 관리">
   <meta property="og:description"
     content="여러 캐릭터의 일일/주간 퀘스트와 보스를 한눈에 파악하고 관리하세요. 메엠 가이드북, 유저 모집, 검색 기능까지 제공하는 메엠지지 입니다.">
-  <meta property="og:image" content="https://mm-gg.netlify.app/og-image.jpg">
+  <meta property="og:image" content="https://mm-gg.netlify.app/og-image.png">
   <meta property="og:url" content="https://mm-gg.netlify.app">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="MMGG - 메이플스토리M 퀘스트 및 보스 관리 플랫폼">
   <meta name="twitter:description" content="간편한 UI로 여러 캐릭터의 퀘스트 및 보스를 손쉽게 관리하고, 유저 검색 및 가이드북 기능까지 활용해보세요.">
-  <meta name="twitter:image" content="https://mm-gg.netlify.app/twitter-image.jpg">
+  <meta name="twitter:image" content="https://mm-gg.netlify.app/twitter-image.png">
 
 
   <link rel="icon" type="image/svg+xml" href="/mmgg.svg" />
