--- a/index.html
+++ b/index.html
@@ -1,49 +1,85 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>메엠지지 - 메이플스토리M 퀘스트·보스 캐릭터별 관리</title>
+    <meta
+      name="description"
+      content="메이플스토리M 여러 캐릭터의 일일·주간·월간 퀘스트와 보스를 한눈에 파악하고 관리하세요. 간편한 UI로 캐릭터별 과제 진행 상황을 쉽게 확인할 수 있습니다. 유저 검색, 파티 모집, 가이드북 등 유용한 정보도 함께 제공합니다."
+    />
+    <link rel="canonical" href="https://mm-gg.netlify.app/" />
 
-  <title>메엠지지 - 메이플스토리M 퀘스트·보스 캐릭터별 관리</title>
-  <meta name="description"
-    content="메이플스토리M 여러 캐릭터의 일일·주간·월간 퀘스트와 보스를 한눈에 파악하고 관리하세요. 간편한 UI로 캐릭터별 과제 진행 상황을 쉽게 확인할 수 있습니다. 유저 검색, 파티 모집, 가이드북 등 유용한 정보도 함께 제공합니다.">
-  <link rel="canonical" href="https://mm-gg.netlify.app/" />
+    <meta
+      name="keywords"
+      content="메이플스토리M, 메엠, 메엠지지, 메이플스토리M 가이드북, 메엠 과제, 메엠 보스, 모바일 메이플스토리, 메이플스토리 모바일, MobileMapleStory, MapleStoryM, 메이플m, MMGG"
+    />
 
-  <meta name="keywords"
-    content="메이플스토리M, 메엠, 메엠지지, 메이플스토리M 가이드북, 메엠 과제, 메엠 보스, 모바일 메이플스토리, 메이플스토리 모바일, MobileMapleStory, MapleStoryM, 메이플m, MMGG">
+    <style>
+      /* 실제 프로젝트의 테마 색상으로 변경하세요. */
+      html.light {
+        background-color: hsl(39, 100%, 99%);
+      }
+      html.dark {
+        background-color: #1b1c1d; /* 예시 다크 모드 배경색 */
+      }
 
-  <!-- Open Graph (Facebook, KakaoTalk 등) -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="MMGG - 메이플스토리M 캐릭터 과제 및 보스 관리">
-  <meta property="og:description"
-    content="여러 캐릭터의 일일/주간 퀘스트와 보스를 한눈에 파악하고 관리하세요. 메엠 가이드북, 유저 모집, 검색 기능까지 제공하는 메엠지지 입니다.">
-  <meta property="og:image" content="https://mm-gg.netlify.app/og-image.png">
-  <meta property="og:url" content="https://mm-gg.netlify.app">
+      /* 로딩 중 부드러운 전환 효과(선택 사항) */
+      body {
+        transition: background-color 0.3s, color 0.3s;
+      }
+    </style>
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="MMGG - 메이플스토리M 퀘스트 및 보스 관리 플랫폼">
-  <meta name="twitter:description" content="간편한 UI로 여러 캐릭터의 퀘스트 및 보스를 손쉽게 관리하고, 유저 검색 및 가이드북 기능까지 활용해보세요.">
-  <meta name="twitter:image" content="https://mm-gg.netlify.app/twitter-image.png">
+    <link rel="icon" type="image/svg+xml" href="/mmgg.svg" />
 
+    <link
+      rel="preload"
+      href="https://cdn.jsdelivr.net/gh/sun-typeface/SUITE@2/fonts/variable/woff2/SUITE-Variable.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/gh/sun-typeface/SUITE@2/fonts/variable/woff2/SUITE-Variable.css"
+      rel="stylesheet"
+    />
 
-  <link rel="icon" type="image/svg+xml" href="/mmgg.svg" />
+    <script>
+      (function () {
+        function getInitialTheme() {
+          const isClient = typeof window !== 'undefined';
+          if (!isClient) {
+            return 'light';
+          }
 
-  <link rel="preload" href="https://cdn.jsdelivr.net/gh/sun-typeface/SUITE@2/fonts/variable/woff2/SUITE-Variable.woff2"
-    as="font" type="font/woff2" crossorigin="anonymous" />
-  <link href="https://cdn.jsdelivr.net/gh/sun-typeface/SUITE@2/fonts/variable/woff2/SUITE-Variable.css"
-    rel="stylesheet">
+          const storageKey = 'vite-ui-theme';
+          const persistedTheme = window.localStorage.getItem(storageKey);
 
-  <script type="module" src="/src/app/main.tsx"></script>
+          if (persistedTheme === 'system' || !persistedTheme) {
+            const systemPreference = window.matchMedia(
+              '(prefers-color-scheme: dark)'
+            ).matches
+              ? 'dark'
+              : 'light';
+            return systemPreference;
+          }
+          return persistedTheme;
+        }
 
-</head>
+        const theme = getInitialTheme();
+        const root = document.documentElement;
+        root.classList.remove('light', 'dark');
+        root.classList.add(theme);
+      })();
+    </script>
+  </head>
 
-<body>
-  <noscript>
-    이 사이트는 JavaScript를 필요로 합니다. JavaScript를 활성화해 주세요.
-  </noscript>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <noscript>
+      이 사이트는 JavaScript를 필요로 합니다. JavaScript를 활성화해 주세요.
+    </noscript>
+    <div id="root"></div>
+    <script type="module" src="/src/app/main.tsx"></script>
+  </body>
 </html>
